--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-    font-family: 'Cormorant Garamond', serif;'Roboto', sans-serif , 'Noto Sans JP', '游ゴシック', YuGothic, 'メイリオ', Verdana, 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+    font-family: 'Cormorant Garamond', serif 'Roboto' , sans-serif , 'Noto Sans JP', '游ゴシック', YuGothic, 'メイリオ', Verdana, 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
     font-size: 1.4rem;
     line-height: 1.6;
     letter-spacing: .1em;
@@ -72,7 +72,7 @@ img {
 }
 
 .top-name {
-    font-family: 'Cormorant Garamond', serif;'Roboto', sans-serif , 'Noto Sans JP', '游ゴシック', YuGothic, 'メイリオ', Verdana, 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+    font-family: 'Cormorant Garamond', serif 'Roboto', sans-serif , 'Noto Sans JP', '游ゴシック', YuGothic, 'メイリオ', Verdana, 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
     margin-left : 45px;
     color: #fff;
 }
@@ -157,7 +157,8 @@ font-size : 18px;
     text-align : center;
 }
 @media(min-width :769px){
-monchat.jade.et.armoise@gmail.comtext-center {
+
+.text-center {
   font-size :15px;
 }
 }
@@ -370,6 +371,7 @@ display: block;
 /* 閉じるボタン */
 
 .btn-close{
+  display : block;
   background: #e9e4e1;
   border-radius: 10px;
   color: #123c29;
@@ -382,6 +384,7 @@ display: block;
 
 /* 開くボタン */
 .btn-open{
+  display :block;
   background: #fff;
   border-radius: 10px;
   color: #fff;
@@ -421,7 +424,7 @@ display: block;
   background : #123c29;
   border : 1px solid #123c29;
   border-radius : 50%;
-  vertical-align : center
+  vertical-align : center;
 }
 
 .contact-form {
@@ -433,7 +436,7 @@ display: block;
 }
 
 .port-title{
-  
+    display : block;
     color: #000;
     line-height: 20px;
 } 
@@ -596,7 +599,7 @@ font-size : 14px;
   width :100%;
   height: 50px;
   padding: 0 20px;
-  box-sixzing : border-box;
+  box-sizing : border-box;
 
  }
   .header-wrap{
@@ -693,17 +696,19 @@ font-size : 20px;
 font-size : 25px;
 }
 @media(max-width : 768px){
-font-size : 18px;
+  .section-subheading{
+    font-size :  18px;
+}
 }
 
 @media(min-width : 769px){
  .portfolio-wrap{
 display : flex;
-{
+ }
 }
 
 @media(min-width : 769px){
-.pop-box {
-width : 50%;
-}
+ .pop-box {
+   width : 50%;
+ }
 }
